# coding-playground

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
exercism/python/anagram/: anagram.py
exercism/python/armstrong-numbers/: armstrong_numbers.py
exercism/python/binary-search/: binary_search.py
exercism/python/black-jack/: black_jack.py
exercism/python/bob/: bob.py
exercism/python/card-games/: lists.py
exercism/python/cater-waiter/: sets.py  sets_categories_data.py
exercism/python/chaitanas-colossal-coaster/: list_methods.py
exercism/python/collatz-conjecture/: collatz_conjecture.py
exercism/python/currency-exchange/: exchange.py
exercism/python/darts/: darts.py
exercism/python/ellens-alien-game/: classes.py
exercism/python/flatten-array/: flatten_array.py
exercism/python/ghost-gobble-arcade-game/: arcade_game.py
exercism/python/grains/: grains.py
exercism/python/guidos-gorgeous-lasagna/: lasagna.py
exercism/python/hamming/: hamming.py
exercism/python/house/: house.py
exercism/python/inventory-management/: dicts.py
exercism/python/isbn-verifier/: isbn_verifier.py
exercism/python/isogram/: isogram.py
exercism/python/leap/: leap.py
exercism/python/little-sisters-essay/: string_methods.py
exercism/python/little-sisters-vocab/: strings.py
exercism/python/locomotive-engineer/: locomotive_engineer.py
exercism/python/making-the-grade/: loops.py
exercism/python/mecha-munch-management/: dict_methods.py
exercism/python/meltdown-mitigation/: conditionals.py
exercism/python/pangram/: pangram.py
(+13 files in other folders)
